feat: add responsive design

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -15,3 +15,20 @@
 .profile__add-button:hover {
     opacity: .6;
 }
+
+@media (max-width: 868px) {
+    .profile__add-button {
+        width: 80%;
+        min-width: 282px;
+        margin: 0 auto;
+        margin-top: 33px;
+    }
+}
+
+@media (max-width: 420px) {
+    .profile__add-button {
+        min-width: 0;
+        width: 100%;
+        max-width: 282px;
+    }
+}
