--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,27 @@
 .page {
+    max-width: 1280px;
     margin: 0 auto;
     background-color:#000000;
     font-family: 'Inter', sans-serif;
     color: #FFFFFF;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    padding: 45px 200px 60px;
 }
+
+/* @media (max-width: 1279px) {
+    .page {
+        padding: 45px 100px 60px;
+    }
+} */
+
+/* @media (max-width: 1279px) {
+    .page {
+        padding: 45px 50px 60px;
+    }
+}
+
+@media (max-width: 420px) {
+    .page {
+        padding: 28px 19px 35px;
+    }
+} */
