--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,3 +3,11 @@
     font-size: 18px;
     line-height: 22px;
 }
+
+@media (max-width: 420px) {
+    .profile__subtitle {
+        font-size: 14px;
+        line-height: 17px;
+        margin-top: 7px;
+    }
+}
