--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,6 +12,7 @@
     outline: none;
     cursor: pointer;
     transition: opacity .1s linear;
+    margin-left: 18px;
 }
 
 .profile__edit-button:hover {
