--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,19 +1,18 @@
 .profile__title {
+    max-width: 450px;
     margin: 0;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
     align-self: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
-
-/* @media (max-width: 550px) {
-    .profile__title {
-        font-size: 30px;
-    }
-} */
 
 @media (max-width: 420px) {
     .profile__title {
+        max-width: 220px;
         margin-left: 27px;
         font-size: 27px;
         line-height: 33px;
