--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
-    max-width: 536px;
+    max-width: 60%;
     display: flex;
+    /* flex-direction: column; */
     flex-wrap: wrap;
     margin-left: 30px;
-    padding-top: 12px;
+    padding-top: 13px;
 }
 
 @media (max-width: 550px) {
