--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,5 @@
 .profile__title {
-    max-width: 450px;
+    max-width: 90%;
     margin: 0;
     font-weight: 500;
     font-size: 42px;
@@ -10,6 +10,14 @@
     overflow: hidden;
 }
 
+@media (max-width: 920px) {
+    .profile__title {
+        max-width: 75%;
+        font-size: 33px;
+        line-height: 36px;
+    }
+}
+ 
 @media (max-width: 420px) {
     .profile__title {
         max-width: 220px;
