--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
     max-width: 1280px;
     margin: 0 auto;
     background-color:#000000;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', "Arial", sans-serif;
     color: #FFFFFF;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
