--- a/blocks/popup/__form-btn/popup__form-btn.css
+++ b/blocks/popup/__form-btn/popup__form-btn.css
@@ -1,6 +1,7 @@
 .popup__form-btn {
     background-color: #000;
     border: 0;
+    border-radius: 2px;
     color: #FFF;
     font-size: 18px;
     line-height: 22px;
