--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,9 @@
     border-radius: 2px;
     box-sizing: border-box;
     background: none;
+    background-image: url(../../../images/add.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     outline: none;
     align-self: center;
     margin-left: auto;
@@ -30,5 +33,6 @@
         min-width: 0;
         width: 100%;
         max-width: 282px;
+        background-size: 17px;
     }
 }
