--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,9 +1,9 @@
 .profile__edit-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border: 1px solid #FFFFFF;
     background: none;
+    background-image: url(../../../images/Vector.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     box-sizing: border-box;
     width: 24px;
     height: 24px;
@@ -25,5 +25,6 @@
         height: 18px;
         margin-top: 0;
         margin-left: 10px;
+        background-size: 7.5px;
     }
 }
