--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -3,10 +3,16 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 34px 36px 37px;
+    width: 430px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 650px) {
     .popup__form {
         padding: 25px 22px;
+        width: 282px;
+        height: 322px;
     }
 }
