--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,3 +1,18 @@
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+} 
+
+@keyframes fade-out {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+
 .popup {
     position: fixed;
     top: 0;
@@ -5,8 +20,13 @@
     bottom: 0;
     left: 0;
     background: rgba(0,0,0,0.5);
-    display: none;
     justify-content: center;
     align-items: center;
     z-index: 100;
+    opacity: 0;
+    /* display: none; */
+    transition: opacity .3s ease-out;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
 }
