--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,5 +1,14 @@
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+}  
+
 .popup_opened {
     display: flex;
+    animation: fade-in 1s;
     opacity: 1;
-    height: auto;
 }
