--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,17 +1,11 @@
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
-} 
-
 @keyframes fade-out {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-    }
+  from {
+    opacity: 1;
   }
+  to {
+    opacity: 0;
+  }
+}
 
 .popup {
     position: fixed;
@@ -24,9 +18,10 @@
     align-items: center;
     z-index: 100;
     opacity: 0;
-    /* display: none; */
-    transition: opacity .3s ease-out;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
+    display: none;
+}
+
+.popup-fade-in {
+  display: flex;
+  animation: fade-out 1s;
 }
