refactor: refactor code according to reviews comments

--- a/blocks/popup/__card-content/popup__card-content.css
+++ b/blocks/popup/__card-content/popup__card-content.css
@@ -1,5 +1,5 @@
 .popup__card-content {
-    display: flex;
+    display: none;
     flex-direction: column;
     max-width: 75vw;
     max-height: 75vh;
