--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,5 @@
 .popup__form {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 34px 36px 37px;
