--- a/pages/index.css
+++ b/pages/index.css
@@ -29,7 +29,10 @@
 @import url(../blocks/popup/__form/_active/popup__form_active.css);
 @import url(../blocks/popup/__form-title/popup__form-title.css);
 @import url(../blocks/popup/__form-input/popup__form-input.css);
+@import url(../blocks/popup/__form-input-error/popup__form-input-error.css);
+@import url(../blocks/popup/__form-input-error/_active/popup__form-input-error_active.css);
 @import url(../blocks/popup/__form-btn/popup__form-btn.css);
+@import url(../blocks/popup/__form-btn/_disabled/popup__form-btn_disabled.css);
 @import url(../blocks/popup/__card-content/popup__card-content.css);
 @import url(../blocks/popup/__card-content/_active/popup__card-content_active.css);
 @import url(../blocks/popup/__card-img/popup__card-img.css);
