--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,14 +1,5 @@
-@keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-}  
-
 .popup_opened {
-    display: flex;
-    animation: fade-in .5s;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
+  transition: .2s;
 }
