--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 .header{padding:45px 200px 0;position:relative}.header:after{border-bottom:1px solid rgba(84,84,84,.7);bottom:-1px;content:"";left:15.63%;max-width:68.75%;position:absolute;width:100%}@media (max-width:1080px){.header{padding:45px 100px 0}.header:after{left:0;max-width:100%}}@media (max-width:420px){.header{padding:28px 19px 0}}
 .header__logo{margin-bottom:37px}@media (max-width:420px){.header__logo{margin-bottom:28px;margin-left:8px;max-width:103.74px}}
 .profile{display:flex;flex-wrap:wrap;padding:40px 200px 0}@media (max-width:1080px){.profile{padding:40px 100px 0}}@media (max-width:768px){.profile{justify-content:center;padding:40px 50px 0}}@media (max-width:420px){.profile{padding:40px 19px 0}}
+.profile__avatar-container{cursor:pointer;display:block;position:relative}.profile__avatar-container:after{background:#000;background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;bottom:0;content:"";height:100%;left:0;opacity:0;position:absolute;right:0;top:0;transition:opacity .2s linear;width:100%}.profile__avatar-container:hover:after{opacity:.8}
 .profile__avatar{border-radius:50%;width:120px}
 .profile__info{display:flex;flex-wrap:wrap;margin-left:30px;max-width:60%;padding-top:13px}@media (max-width:550px){.profile__info{justify-content:center;margin-left:0;max-width:100%;padding-top:29px}}
 .profile__title{align-self:center;font-size:42px;font-weight:500;line-height:48px;margin:0;max-width:90%;min-width:50%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:920px){.profile__title{font-size:33px;line-height:36px;max-width:75%}}@media (max-width:420px){.profile__title{font-size:27px;line-height:33px;margin-left:27px;max-width:220px}}
@@ -16,8 +17,9 @@
 .element__image{cursor:pointer;height:282px;width:100%}
 .element__info{display:flex;justify-content:space-between;padding:22px 20px 25px 21px}
 .element__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:190px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.element__like{background:none;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;transition:opacity .1s linear;width:22px}.element__like:hover{opacity:.5}
+.element__like{background:none;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;border:0;cursor:pointer;height:19px;position:absolute;right:20px;top:304px;transition:opacity .1s linear;width:22px}.element__like:hover{opacity:.5}
 .like_active{background-image:url(fe17a515669479b1e649.svg)}
+.element__like-count{bottom:22px;color:#000;font-size:13px;font-weight:400;line-height:16px;position:absolute;right:27px}
 .footer{padding:0 200px 60px}@media (max-width:1080px){.footer{padding:0 100px 60px}}@media (max-width:420px){.footer{padding:0 19px 33px}}
 .footer__copyright{color:#545454;font-size:18px;line-height:22px;margin:0}@media (max-width:420px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{align-content:center;align-items:center;background:rgba(0,0,0,.5);bottom:0;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:.2s;visibility:hidden;z-index:100}
